# louie-priceaction-strategy

./: .gitignore  MEMORY.md  README.md  TODO.md  __init__.py  backtest_runner.py  backtest_summary_2025.md  brooks_concepts.py  china_futures_strategy.py  ctp_config.example.json  ctp_trader.py  data_fetcher.py  indicators.py  intraday_data.py  market_data.py  multi_backtest_runner.py  param_optimizer.py  position_manager.py  pyproject.toml  risk.py  risk_manager.py  run_signal_monitor.sh  signal_monitor.py  strategy.py  symbol_selector.py
.openclaw/: workspace-state.json
data/: TA0_monthly_2025.md  backtest_latest.json  backtest_latest_report.md  backtest_oos_2026.json  backtest_optimized_2026.json  backtest_optimized_2026.md  backtest_summary_2025.md  backtest_summary_2026.md  monthly_backtest_2025.md  optimization_history.json  optimization_results.json  pta_deep_analysis.md  pta_detail.json  pta_optimization.json  pta_optimization_report.md  pta_stop_optimization.json  pta_swing_stop.json  pta_vol_filter.json
docs/: al_brooks_improvements.md
memory/: 2025-04-02.md
quant/: README.md  __init__.py  apply_params.py  backtest.py  backtest_result_rb_20260402_070723.json  backtest_result_rb_20260402_070724.json  backtest_result_rb_20260402_070922.json  backtest_result_rb_20260402_070949.json  backtest_result_rb_20260402_071045.json  backtest_result_rb_20260402_071310.json  backtest_result_rb_20260402_071345.json  backtest_runner.py  china_futures_strategy.py  patterns.py  price_action_framework.py  pyproject.toml  test_sma.py
scripts/: auto_trader.py  detailed_pta.py  (+11 more)
(+9 files in other folders)
