[project]
name = "quant"
version = "0.1.0"
description = "Price Action Trading System"
requires-python = ">=3.11"
dependencies = [
    "akshare",
]

[tool.uv]
dev-dependencies = ["pytest"]

[[tool.uv.index]]
name = "tuna"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"

[tool.pytest.ini_options]
pythonpath = ["."]
